Alignment Fixed

--- a/packages/Webkul/Velocity/src/Resources/assets/sass/components/app.scss
+++ b/packages/Webkul/Velocity/src/Resources/assets/sass/components/app.scss
@@ -1111,6 +1111,7 @@
 
                 .filter-left {
                     float: left;
+                    padding: 18px;
                 }
 
                 .filter-right {
@@ -1118,10 +1119,12 @@
                     width: 70%;
                     float: right;
                     position: relative;
+                    padding: 10px;
 
                     .per-page {
                         right: 0;
-                        position: absolute;
+                        width: 150px;
+                        margin-bottom: 10px;
                     }
                 }
             }
@@ -2620,7 +2623,8 @@
         }
     }
 
-    .compare-products .col, .compare-products .col-2 {
+    .compare-products .col,
+    .compare-products .col-2 {
         max-width: 25%;
     }
 }
