--- a/packages/Webkul/Velocity/src/Resources/assets/sass/components/media.scss
+++ b/packages/Webkul/Velocity/src/Resources/assets/sass/components/media.scss
@@ -1049,7 +1049,6 @@
 
     button.btn.btn-sm.btn-primary.apply-filter {
         margin-top: 10px;
-        margin-left: -158px;
     }
 
     .quick-view-btn-container span {
